--- a/UnityChanAdventure/Assets/Plugins/Android/GooglePlayGamesManifest.androidlib/AndroidManifest.xml
+++ b/UnityChanAdventure/Assets/Plugins/Android/GooglePlayGamesManifest.androidlib/AndroidManifest.xml
@@ -7,7 +7,7 @@
     android:versionName="1.0" >
 
      
-
+<uses-permission android:name="com.android.vending.BILLING"/>
     <application>
 
      
